# diurnals

./: .gitignore  LICENSE  PKGBUILD  README.md  dev_main.py  main.py  meson.build  pyproject.toml  requirements-dev.txt  requirements.txt
data/: com.bmcomis2018.todoist-dailies.desktop.in  io.github.sss-says-snek.todoist-dailies.desktop.in  io.github.sss_says_snek.diurnals.desktop.in  io.github.sss_says_snek.diurnals.gresource.xml  io.github.sss_says_snek.diurnals.gschema.xml.in  io.github.sss_says_snek.diurnals.metainfo.xml.in  io.github.sss_says_snek.todoist-dailies.desktop.in  io.github.sss_says_snek.todoist_dailies.desktop.in  io.github.sss_says_snek.todoist_dailies.gresource.xml  io.github.sss_says_snek.todoist_dailies.gschema.xml.in  io.github.sss_says_snek.todoist_dailies.metainfo.xml.in  meson.build
flatpak/: com.bmcomis2018.todoist-dailies.yml  io.github.sss-says-snek.todoist-dailies.yml  io.github.sss_says_snek.todoist-dailies.yml  io.github.sss_says_snek.todoist_dailies.yml
src/: api_dialog.py  config_schedule_row.py  config_window.py  constants.py  diurnals.in  main.py  meson.build  statusicon.py  style.css  todoist-dailies.in  todoist_dailies.in  todoist_element.py  todoist_worker.py  welcome_carousel.py  window.py
todoist_dailies/: config_window.py  constants.py  main.py  todoist_worker.py
