project('todoist-dailies',
  version: '0.0.1',
  meson_version: '>= 0.55.0'
)

dependency('gobject-introspection-1.0', version: '>= 1.35.0')
dependency('gtk4')
dependency('libadwaita-1', version: '>= 1.0')
dependency('libsoup-3.0')
dependency('glib-2.0')
dependency('pygobject-3.0', version: '>= 3.29.1')

subdir('src')
